[Css](App) Fix z-index for nav in mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -66,7 +66,7 @@
 
 
       .register-link {
-        margin-top:15px;
+        margin-top: 15px;
         text-align: center;
       }
     }
@@ -286,11 +286,16 @@ body {
   font-family: 'Poppins', sans-serif;
 
 
-  .nav ul {
-    list-style-type: none;
-    padding: 0;
-    width: 165px;
-    margin: 0 auto;
+  .nav {
+    z-index: 2;
+
+    ul {
+
+      list-style-type: none;
+      padding: 0;
+      width: 165px;
+      margin: 0 auto;
+    }
 
     a {
       text-decoration: none;
@@ -393,7 +398,7 @@ body {
         }
       }
 
-      z-index: 1;
+      z-index: 2;
       top: inherit;
       bottom: 0;
       width: 100%;
@@ -424,8 +429,8 @@ body {
         .menu-logo {
           display: block;
           position: absolute;
-          top:50%;
-          left:50%;
+          top: 50%;
+          left: 50%;
           transform: translate(-50%, -50%);
           font-size: 25px;
         }
@@ -445,6 +450,7 @@ body {
 @media screen and (min-width: 768px) {
   body {
     margin-bottom: 100px;
+
     .gi-container {
       margin: 0 50px;
 
@@ -455,7 +461,7 @@ body {
         left: 225px;
         z-index: 1;
         background: linear-gradient(0, $giwiki-light-blue, transparent);
-        padding:20px;
+        padding: 20px;
       }
     }
 
@@ -471,9 +477,9 @@ body {
 
       .logo {
         position: absolute;
-        left:50%;
+        left: 50%;
         bottom: 0;
-        transform: translate( -50%, 0);
+        transform: translate(-50%, 0);
 
 
         img {
